--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,12 @@ body {
   color: #f2f2f2;
 }
 
+.display h2 {
+  font-weight: 500;
+  font-size: 15px;
+  color: #6d53d6;
+}
+
 .close {
   cursor: pointer;
   opacity: 0.7;
